# proto-client

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: checks.yml  claude.yml  unit-tests.yml
docs/: cli.md  mcp.md
proto_client/: __init__.py  _assets.py  _defaults.py  _http.py  _ndjson.py  assets.py  cli.py  client.py  errors.py  events.py  models.py  runs.py  tools.py
proto_client/_async/: __init__.py  _ndjson.py  assets.py  client.py  runs.py  tools.py
proto_client/mcp/: __init__.py  __main__.py  app.py  prompts.py  resources.py  server.py  tools.py
proto_client/utils/: __init__.py  asset_helpers.py  defaults.py  export_names.py  http.py  version.py
scripts/: gen_sync.py
tests/: conftest.py  helpers.py  test_assets.py  test_async_client.py  test_async_tools.py  test_cli.py  test_client.py  test_errors.py  test_export.py  test_logging.py  test_me.py  test_models.py  test_retry.py  test_runs_async.py  test_runs_sync.py  test_streaming.py  test_tools.py  test_tools_async.py  test_tools_sync.py
tests/test_mcp/: test_http_integration.py  test_resources.py  test_server.py  test_tools.py
