[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proto-client"
version = "0.1.0"
description = "Python SDK for Proto Bio APIs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "pre-commit>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
